--- a/css/styles.css
+++ b/css/styles.css
@@ -13,52 +13,52 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 68px;
-  padding: 0 24px;
+  height: 4.25rem;
+  padding: 0 1.5rem;
 }
-@media (min-width: 1115px) {
+@media (min-width: 69.6875em) {
   .header {
-    height: 112px;
+    height: 7rem;
     border-bottom: 1px solid hsl(220, 14%, 75%);
   }
 }
 .header__navigation {
-  width: 175px;
+  width: 10.9375rem;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-@media (min-width: 1115px) {
+@media (min-width: 69.6875em) {
   .header__navigation {
-    width: 590px;
+    width: 36.875rem;
   }
 }
 .header__menu:hover {
   cursor: pointer;
 }
-@media (min-width: 1115px) {
+@media (min-width: 69.6875em) {
   .header__menu {
     display: none;
   }
 }
 .header__cart-avatar {
-  width: 70px;
+  width: 4.375rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-@media (min-width: 1115px) {
+@media (min-width: 69.6875em) {
   .header__cart-avatar {
-    width: 125px;
+    width: 7.8125rem;
   }
 }
 .header__cart {
   position: relative;
 }
 .header__cart--notification {
-  width: 15px;
-  height: 12px;
+  width: 0.9375rem;
+  height: 0.75rem;
   border-radius: 16px;
   position: absolute;
   background-color: hsl(26, 100%, 55%);
@@ -73,15 +73,15 @@ body {
   cursor: pointer;
 }
 .header__avatar {
-  width: 24px;
+  width: 1.5rem;
   outline: 2px solid transparent;
   transition: outline-color 0.2s ease-in-out;
   border-radius: 50%;
   cursor: pointer;
 }
-@media (min-width: 1115px) {
+@media (min-width: 69.6875em) {
   .header__avatar {
-    width: 40px;
+    width: 2.5rem;
   }
 }
 .header__avatar:hover {
@@ -90,7 +90,7 @@ body {
 
 .navbar {
   display: none;
-  width: 400px;
+  width: 25rem;
   height: 100%;
   align-content: center;
   justify-content: center;
@@ -110,7 +110,7 @@ body {
   flex-wrap: wrap;
   align-items: center;
   height: 100%;
-  padding-top: 4px;
+  padding-top: 0.25rem;
   border-bottom: 4px solid transparent;
 }
 .navbar__items li:hover {
@@ -124,7 +124,7 @@ body {
 .navbar__link:hover {
   color: hsl(220, 13%, 13%);
 }
-@media (min-width: 1115px) {
+@media (min-width: 69.6875em) {
   .navbar {
     display: flex;
   }
@@ -132,9 +132,9 @@ body {
 
 .modal-navbar {
   background-color: hsl(0, 0%, 100%);
-  width: 250px;
+  width: 15.625rem;
   height: 100%;
-  padding: 20px 24px;
+  padding: 1.25rem 1.5rem;
 }
 .modal-navbar__backgruound {
   display: none;
@@ -146,10 +146,10 @@ body {
   height: 100vh;
 }
 .modal-navbar__items {
-  margin-top: 50px;
+  margin-top: 3.125rem;
   display: flex;
   flex-direction: column;
-  height: 200px;
+  height: 12.5rem;
   justify-content: space-between;
   list-style: none;
 }
@@ -164,12 +164,12 @@ body {
 }
 
 .main-container {
-  width: 375px;
+  width: 23.4375rem;
   border: 1px solid black;
   margin: auto;
 }
-@media (min-width: 1115px) {
+@media (min-width: 69.6875em) {
   .main-container {
-    width: 1115px;
+    width: 69.6875rem;
   }
 }/*# sourceMappingURL=styles.css.map */
