--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -38,6 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
     @include b.breakpoint(xlarge) {
       width: f.rem(125);
     }
