update initial styles

--- a/sass/_initial.scss
+++ b/sass/_initial.scss
@@ -9,3 +9,10 @@
 body {
   font-family: variables.$font;
 }
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
