--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -14,7 +14,7 @@
 
 .main-container {
   width: f.rem(375);
-  border: 1px solid black;
+  border: 1px solid rgb(209, 7, 7);
   margin: auto;
   // position: relative;
   @include b.breakpoint(xlarge) {
